tinyc/test/bad/do-while-empty.c
int main()
{
    do {
        int x = 1;
    }
    while ();

    return 0;
}
